# Todo-Application

./: .gitignore  README.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
backend/: .env.example  README.md  alembic.ini  debug_bcrypt.py  direct_bcrypt_test.py  fresh_test.py  main.py  pyproject.toml  requirements.txt  test_bcrypt_fix.py  todo_app.db
backend/alembic/: env.py
backend/src/api/: auth_routes.py  task_routes.py
backend/src/db/: database.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: task.py  user.py
backend/src/services/: auth_service.py  task_service.py
backend/src/utils/: auth.py  logging.py
backend/tests/contract/: test_auth.py  test_task_completion.py  test_task_creation.py
backend/tests/integration/: test_auth_flow.py  test_task_completion.py  test_task_management.py
frontend/: .env.local  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  navbar.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/tasks/: page.tsx
frontend/src/components/: ConfirmationModal.tsx  Layout.tsx  NotificationProvider.tsx
frontend/src/services/: authService.ts  taskService.ts
history/prompts/console-to-web-platform/: 1-create-specification.spec.prompt.md  1-implementation-completion.general.prompt.md  2-create-implementation-plan.plan.prompt.md  3-create-implementation-tasks.tasks.prompt.md
specs/001-console-to-web-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/master/: plan.md
(+7 files in other folders)
